# cgeserver

./: .gitignore  .gitmodules  LICENSE  README.md  cgeserver.db  cgeserver.spec  main.py  pyproject.toml  settings.env
app/: config.py  crud.py  db.py  models.py  response.py  routers.py  schemas.py  schmeas.py  ws.py
app/api/: deps.py
app/api/v1/: __init__.py  ssr_router.py  ws_router.py
app/crud/: base.py  database.py  ssr_crud.py
app/database/: __init__.py  ssr.py
app/db/: engine.py
app/model/: __init__.py  ssr.py  ssr_model.py
app/router/: __init__.py  ssr.py  ws.py
app/ssr/: router.py
config/: __init__.py
database/: __init__.py  ssr.py
front/: .env.development  .env.production  .eslintignore  package.json  vue.config.js
front/public/: app.js  index.html  link.js  peer-stream.js  webRtcPlayer.js
front/src/: main.js  permission.js  settings.js
front/src/api/: dev.js  table.js  user.js
front/src/layout/components/: Navbar.vue
front/src/router/: index.js
front/src/utils/: auth.js  request.js
front/src/views/login/: index.vue
front/src/views/openstreaming/: index.vue  player.css
front/src/views/streamingserver/: index.vue
front/src/views/table/: index.vue
model/: __init__.py  database.py  ssr.py
router/: __init__.py  response_model.py  ssr.py  ws.py
